-- Business schema adapted from docs/database/schema.dbml.
-- Authentication retains numeric IDs and one role per user.
-- UUID strings for business IDs are generated by the application.

ALTER TABLE users ADD COLUMN deleted_at TIMESTAMP;

-- Read-only compatibility relation: users.role_id remains the source of truth.
CREATE VIEW user_roles AS SELECT user_id, role_id FROM users;

CREATE INDEX IF NOT EXISTS idx_refresh_tokens_token ON refresh_tokens (token);

CREATE TABLE role_change_requests (
    id CHAR(36) PRIMARY KEY,
    user_id BIGINT NOT NULL,
    current_role_id INTEGER,
    requested_role_id INTEGER NOT NULL,
    reason TEXT,
    status VARCHAR(20) NOT NULL DEFAULT 'Pending',
    reviewed_by BIGINT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    reviewed_at TIMESTAMP
);

CREATE TABLE stable_boxes (
    id CHAR(36) PRIMARY KEY,
    box_code VARCHAR(20) NOT NULL UNIQUE,
    section VARCHAR(50),
    capacity INT DEFAULT 1,
    status VARCHAR(20) DEFAULT 'Available'
);

CREATE TABLE horses (
    id CHAR(36) PRIMARY KEY,
    horse_name VARCHAR(100) NOT NULL,
    breed VARCHAR(50),
    birth_year INT,
    pedigree_father VARCHAR(100),
    pedigree_mother VARCHAR(100),
    image_url VARCHAR(512),
    stable_box_id CHAR(36),
    current_status VARCHAR(20) NOT NULL DEFAULT 'Healthy',
    current_weight_kg DECIMAL(6,2),
    readiness_status VARCHAR(20) DEFAULT 'Unknown',
    is_training_locked BOOLEAN NOT NULL DEFAULT FALSE,
    lock_reason VARCHAR(255),
    lock_level VARCHAR(20),
    owner_id BIGINT,
    deleted_at TIMESTAMP,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE training_plans (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    stage_name VARCHAR(100) NOT NULL,
    start_date DATE,
    end_date DATE,
    objective TEXT,
    target_distance_meters INT,
    target_intensity VARCHAR(20),
    created_by BIGINT,
    update_deadline_hours INT DEFAULT 24,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE training_plan_logs (
    id CHAR(36) PRIMARY KEY,
    training_plan_id CHAR(36) NOT NULL,
    changed_by BIGINT,
    old_data_json TEXT,
    new_data_json TEXT,
    changed_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE training_schedules (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    training_plan_id CHAR(36),
    session_type VARCHAR(20) DEFAULT 'Training',
    track_surface VARCHAR(50),
    assigned_groom_id BIGINT,
    training_date DATE NOT NULL,
    start_time TIME,
    status VARCHAR(20) DEFAULT 'Scheduled',
    notes TEXT,
    created_by BIGINT
);

CREATE TABLE training_metrics_logs (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    training_schedule_id CHAR(36),
    recorded_by BIGINT,
    body_weight_kg DECIMAL(6,2),
    max_heart_rate INT,
    avg_speed_kmh DECIMAL(5,2),
    stamina_score DECIMAL(5,2),
    has_injury_alert BOOLEAN NOT NULL DEFAULT FALSE,
    trainer_review TEXT,
    recorded_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE races (
    id CHAR(36) PRIMARY KEY,
    race_name VARCHAR(150) NOT NULL,
    grade VARCHAR(10),
    distance_category VARCHAR(20),
    distance_meters INT,
    race_date DATE NOT NULL,
    location VARCHAR(150),
    description TEXT
);

CREATE TABLE horse_race_entries (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    race_id CHAR(36) NOT NULL,
    registered_by BIGINT,
    result_position INT,
    prize_amount DECIMAL(15,2),
    status VARCHAR(20) DEFAULT 'Registered',
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE training_videos (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    training_schedule_id CHAR(36),
    video_url VARCHAR(512) NOT NULL,
    description VARCHAR(255),
    uploaded_by BIGINT,
    uploaded_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE health_exams (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    doctor_id BIGINT,
    exam_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    temperature_c DECIMAL(4,1),
    heart_rate INT,
    respiratory_rate INT,
    mucous_membrane_color VARCHAR(50),
    capillary_refill_sec DECIMAL(4,1),
    skin_turgor VARCHAR(50),
    jugular_pulse VARCHAR(50),
    digital_pulse VARCHAR(50),
    gut_sounds VARCHAR(50),
    defecation_frequency VARCHAR(50),
    urination_frequency VARCHAR(50),
    body_condition_score DECIMAL(3,1),
    hoof_temperature VARCHAR(50),
    gait_assessment TEXT,
    hematology_result TEXT,
    biochemistry_result TEXT,
    fecal_test_result TEXT,
    notes TEXT
);

CREATE TABLE health_exam_logs (
    id CHAR(36) PRIMARY KEY,
    health_exam_id CHAR(36) NOT NULL,
    edited_by BIGINT,
    old_data_json TEXT,
    new_data_json TEXT,
    edited_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE medical_records (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    doctor_id BIGINT,
    health_exam_id CHAR(36),
    diagnosis TEXT NOT NULL,
    treatment_plan TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE prescriptions (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    doctor_id BIGINT,
    medical_record_id CHAR(36),
    drug_name VARCHAR(150) NOT NULL,
    dosage VARCHAR(100),
    frequency VARCHAR(100),
    route VARCHAR(50),
    start_date DATE,
    end_date DATE,
    status VARCHAR(20) DEFAULT 'Active',
    notes TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE diet_records (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    doctor_id BIGINT,
    feed_type VARCHAR(100),
    quantity_kg DECIMAL(6,2),
    feeding_frequency VARCHAR(50),
    special_instructions TEXT,
    effective_date DATE,
    end_date DATE,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE injury_markers (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    medical_record_id CHAR(36),
    body_part VARCHAR(50),
    coordinate_x DECIMAL(6,3),
    coordinate_y DECIMAL(6,3),
    coordinate_z DECIMAL(6,3),
    severity VARCHAR(20),
    description TEXT,
    marked_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE periodic_care_schedules (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    care_type VARCHAR(30) NOT NULL,
    frequency_days INT,
    last_done_date DATE,
    next_due_date DATE NOT NULL,
    assigned_doctor_id BIGINT,
    notes TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE notifications (
    id CHAR(36) PRIMARY KEY,
    user_id BIGINT NOT NULL,
    related_table VARCHAR(50),
    related_id CHAR(36),
    message TEXT NOT NULL,
    is_read BOOLEAN DEFAULT FALSE,
    scheduled_at TIMESTAMP,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE daily_task_logs (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    groom_id BIGINT,
    assigned_by BIGINT,
    task_type VARCHAR(30) NOT NULL,
    task_date DATE NOT NULL,
    status VARCHAR(20) DEFAULT 'Pending',
    completed_at TIMESTAMP
);

CREATE TABLE stable_incidents (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    groom_id BIGINT,
    issue_description TEXT NOT NULL,
    image_url VARCHAR(512),
    status VARCHAR(20) NOT NULL DEFAULT 'Pending',
    reviewed_by BIGINT,
    resolved_at TIMESTAMP,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE inventory_items (
    id CHAR(36) PRIMARY KEY,
    item_name VARCHAR(100) NOT NULL,
    category VARCHAR(30),
    unit VARCHAR(20),
    quantity_in_stock DECIMAL(10,2) DEFAULT 0,
    reorder_threshold DECIMAL(10,2),
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE supply_requests (
    id CHAR(36) PRIMARY KEY,
    requested_by BIGINT NOT NULL,
    item_id CHAR(36) NOT NULL,
    quantity_requested DECIMAL(10,2) NOT NULL,
    reason TEXT,
    status VARCHAR(20) DEFAULT 'Pending',
    reviewed_by BIGINT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    reviewed_at TIMESTAMP
);

CREATE TABLE financial_reports (
    id CHAR(36) PRIMARY KEY,
    horse_id CHAR(36) NOT NULL,
    transaction_type VARCHAR(30) NOT NULL,
    amount DECIMAL(15,2) NOT NULL,
    billing_period VARCHAR(7) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE audit_logs (
    id CHAR(36) PRIMARY KEY,
    user_id BIGINT,
    action_performed VARCHAR(255) NOT NULL,
    ip_address VARCHAR(45),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

ALTER TABLE role_change_requests ADD CONSTRAINT fk_role_change_requests_user_id FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;
ALTER TABLE role_change_requests ADD CONSTRAINT fk_role_change_requests_current_role_id FOREIGN KEY (current_role_id) REFERENCES roles (role_id) ON DELETE SET NULL;
ALTER TABLE role_change_requests ADD CONSTRAINT fk_role_change_requests_requested_role_id FOREIGN KEY (requested_role_id) REFERENCES roles (role_id) ON DELETE CASCADE;
ALTER TABLE role_change_requests ADD CONSTRAINT fk_role_change_requests_reviewed_by FOREIGN KEY (reviewed_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE horses ADD CONSTRAINT fk_horses_stable_box_id FOREIGN KEY (stable_box_id) REFERENCES stable_boxes (id) ON DELETE SET NULL;
ALTER TABLE horses ADD CONSTRAINT fk_horses_owner_id FOREIGN KEY (owner_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE training_plans ADD CONSTRAINT fk_training_plans_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE training_plans ADD CONSTRAINT fk_training_plans_created_by FOREIGN KEY (created_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE training_plan_logs ADD CONSTRAINT fk_training_plan_logs_training_plan_id FOREIGN KEY (training_plan_id) REFERENCES training_plans (id) ON DELETE CASCADE;
ALTER TABLE training_plan_logs ADD CONSTRAINT fk_training_plan_logs_changed_by FOREIGN KEY (changed_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE training_schedules ADD CONSTRAINT fk_training_schedules_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE training_schedules ADD CONSTRAINT fk_training_schedules_training_plan_id FOREIGN KEY (training_plan_id) REFERENCES training_plans (id) ON DELETE SET NULL;
ALTER TABLE training_schedules ADD CONSTRAINT fk_training_schedules_assigned_groom_id FOREIGN KEY (assigned_groom_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE training_schedules ADD CONSTRAINT fk_training_schedules_created_by FOREIGN KEY (created_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE training_metrics_logs ADD CONSTRAINT fk_training_metrics_logs_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE training_metrics_logs ADD CONSTRAINT fk_training_metrics_logs_training_schedule_id FOREIGN KEY (training_schedule_id) REFERENCES training_schedules (id) ON DELETE SET NULL;
ALTER TABLE training_metrics_logs ADD CONSTRAINT fk_training_metrics_logs_recorded_by FOREIGN KEY (recorded_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE horse_race_entries ADD CONSTRAINT fk_horse_race_entries_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE horse_race_entries ADD CONSTRAINT fk_horse_race_entries_race_id FOREIGN KEY (race_id) REFERENCES races (id) ON DELETE CASCADE;
ALTER TABLE horse_race_entries ADD CONSTRAINT fk_horse_race_entries_registered_by FOREIGN KEY (registered_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE training_videos ADD CONSTRAINT fk_training_videos_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE training_videos ADD CONSTRAINT fk_training_videos_training_schedule_id FOREIGN KEY (training_schedule_id) REFERENCES training_schedules (id) ON DELETE SET NULL;
ALTER TABLE training_videos ADD CONSTRAINT fk_training_videos_uploaded_by FOREIGN KEY (uploaded_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE health_exams ADD CONSTRAINT fk_health_exams_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE health_exams ADD CONSTRAINT fk_health_exams_doctor_id FOREIGN KEY (doctor_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE health_exam_logs ADD CONSTRAINT fk_health_exam_logs_health_exam_id FOREIGN KEY (health_exam_id) REFERENCES health_exams (id) ON DELETE CASCADE;
ALTER TABLE health_exam_logs ADD CONSTRAINT fk_health_exam_logs_edited_by FOREIGN KEY (edited_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE medical_records ADD CONSTRAINT fk_medical_records_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE medical_records ADD CONSTRAINT fk_medical_records_doctor_id FOREIGN KEY (doctor_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE medical_records ADD CONSTRAINT fk_medical_records_health_exam_id FOREIGN KEY (health_exam_id) REFERENCES health_exams (id) ON DELETE SET NULL;
ALTER TABLE prescriptions ADD CONSTRAINT fk_prescriptions_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE prescriptions ADD CONSTRAINT fk_prescriptions_doctor_id FOREIGN KEY (doctor_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE prescriptions ADD CONSTRAINT fk_prescriptions_medical_record_id FOREIGN KEY (medical_record_id) REFERENCES medical_records (id) ON DELETE SET NULL;
ALTER TABLE diet_records ADD CONSTRAINT fk_diet_records_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE diet_records ADD CONSTRAINT fk_diet_records_doctor_id FOREIGN KEY (doctor_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE injury_markers ADD CONSTRAINT fk_injury_markers_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE injury_markers ADD CONSTRAINT fk_injury_markers_medical_record_id FOREIGN KEY (medical_record_id) REFERENCES medical_records (id) ON DELETE SET NULL;
ALTER TABLE periodic_care_schedules ADD CONSTRAINT fk_periodic_care_schedules_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE periodic_care_schedules ADD CONSTRAINT fk_periodic_care_schedules_assigned_doctor_id FOREIGN KEY (assigned_doctor_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE notifications ADD CONSTRAINT fk_notifications_user_id FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;
ALTER TABLE daily_task_logs ADD CONSTRAINT fk_daily_task_logs_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE daily_task_logs ADD CONSTRAINT fk_daily_task_logs_groom_id FOREIGN KEY (groom_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE daily_task_logs ADD CONSTRAINT fk_daily_task_logs_assigned_by FOREIGN KEY (assigned_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE stable_incidents ADD CONSTRAINT fk_stable_incidents_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE stable_incidents ADD CONSTRAINT fk_stable_incidents_groom_id FOREIGN KEY (groom_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE stable_incidents ADD CONSTRAINT fk_stable_incidents_reviewed_by FOREIGN KEY (reviewed_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE supply_requests ADD CONSTRAINT fk_supply_requests_item_id FOREIGN KEY (item_id) REFERENCES inventory_items (id) ON DELETE CASCADE;
ALTER TABLE supply_requests ADD CONSTRAINT fk_supply_requests_requested_by FOREIGN KEY (requested_by) REFERENCES users (user_id) ON DELETE RESTRICT;
ALTER TABLE supply_requests ADD CONSTRAINT fk_supply_requests_reviewed_by FOREIGN KEY (reviewed_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE financial_reports ADD CONSTRAINT fk_financial_reports_horse_id FOREIGN KEY (horse_id) REFERENCES horses (id) ON DELETE CASCADE;
ALTER TABLE audit_logs ADD CONSTRAINT fk_audit_logs_user_id FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE SET NULL;

-- Index referencing columns for joins, ownership checks and deletion checks.
CREATE INDEX idx_role_change_requests_user_id ON role_change_requests (user_id);
CREATE INDEX idx_role_change_requests_current_role_id ON role_change_requests (current_role_id);
CREATE INDEX idx_role_change_requests_requested_role_id ON role_change_requests (requested_role_id);
CREATE INDEX idx_role_change_requests_reviewed_by ON role_change_requests (reviewed_by);
CREATE INDEX idx_horses_stable_box_id ON horses (stable_box_id);
CREATE INDEX idx_horses_owner_id ON horses (owner_id);
CREATE INDEX idx_training_plans_horse_id ON training_plans (horse_id);
CREATE INDEX idx_training_plans_created_by ON training_plans (created_by);
CREATE INDEX idx_training_plan_logs_training_plan_id ON training_plan_logs (training_plan_id);
CREATE INDEX idx_training_plan_logs_changed_by ON training_plan_logs (changed_by);
CREATE INDEX idx_training_schedules_horse_id ON training_schedules (horse_id);
CREATE INDEX idx_training_schedules_training_plan_id ON training_schedules (training_plan_id);
CREATE INDEX idx_training_schedules_assigned_groom_id ON training_schedules (assigned_groom_id);
CREATE INDEX idx_training_schedules_created_by ON training_schedules (created_by);
CREATE INDEX idx_training_metrics_logs_horse_id ON training_metrics_logs (horse_id);
CREATE INDEX idx_training_metrics_logs_training_schedule_id ON training_metrics_logs (training_schedule_id);
CREATE INDEX idx_training_metrics_logs_recorded_by ON training_metrics_logs (recorded_by);
CREATE INDEX idx_horse_race_entries_horse_id ON horse_race_entries (horse_id);
CREATE INDEX idx_horse_race_entries_race_id ON horse_race_entries (race_id);
CREATE INDEX idx_horse_race_entries_registered_by ON horse_race_entries (registered_by);
CREATE INDEX idx_training_videos_horse_id ON training_videos (horse_id);
CREATE INDEX idx_training_videos_training_schedule_id ON training_videos (training_schedule_id);
CREATE INDEX idx_training_videos_uploaded_by ON training_videos (uploaded_by);
CREATE INDEX idx_health_exams_horse_id ON health_exams (horse_id);
CREATE INDEX idx_health_exams_doctor_id ON health_exams (doctor_id);
CREATE INDEX idx_health_exam_logs_health_exam_id ON health_exam_logs (health_exam_id);
CREATE INDEX idx_health_exam_logs_edited_by ON health_exam_logs (edited_by);
CREATE INDEX idx_medical_records_horse_id ON medical_records (horse_id);
CREATE INDEX idx_medical_records_doctor_id ON medical_records (doctor_id);
CREATE INDEX idx_medical_records_health_exam_id ON medical_records (health_exam_id);
CREATE INDEX idx_prescriptions_horse_id ON prescriptions (horse_id);
CREATE INDEX idx_prescriptions_doctor_id ON prescriptions (doctor_id);
CREATE INDEX idx_prescriptions_medical_record_id ON prescriptions (medical_record_id);
CREATE INDEX idx_diet_records_horse_id ON diet_records (horse_id);
CREATE INDEX idx_diet_records_doctor_id ON diet_records (doctor_id);
CREATE INDEX idx_injury_markers_horse_id ON injury_markers (horse_id);
CREATE INDEX idx_injury_markers_medical_record_id ON injury_markers (medical_record_id);
CREATE INDEX idx_periodic_care_schedules_horse_id ON periodic_care_schedules (horse_id);
CREATE INDEX idx_periodic_care_schedules_assigned_doctor_id ON periodic_care_schedules (assigned_doctor_id);
CREATE INDEX idx_notifications_user_id ON notifications (user_id);
CREATE INDEX idx_daily_task_logs_horse_id ON daily_task_logs (horse_id);
CREATE INDEX idx_daily_task_logs_groom_id ON daily_task_logs (groom_id);
CREATE INDEX idx_daily_task_logs_assigned_by ON daily_task_logs (assigned_by);
CREATE INDEX idx_stable_incidents_horse_id ON stable_incidents (horse_id);
CREATE INDEX idx_stable_incidents_groom_id ON stable_incidents (groom_id);
CREATE INDEX idx_stable_incidents_reviewed_by ON stable_incidents (reviewed_by);
CREATE INDEX idx_supply_requests_item_id ON supply_requests (item_id);
CREATE INDEX idx_supply_requests_requested_by ON supply_requests (requested_by);
CREATE INDEX idx_supply_requests_reviewed_by ON supply_requests (reviewed_by);
CREATE INDEX idx_financial_reports_horse_id ON financial_reports (horse_id);
CREATE INDEX idx_audit_logs_user_id ON audit_logs (user_id);

CREATE INDEX idx_horses_deleted_at ON horses (deleted_at);
CREATE INDEX idx_horses_name ON horses (horse_name);
CREATE INDEX idx_horses_filters ON horses (current_status, breed, is_training_locked);
CREATE INDEX idx_training_schedules_date ON training_schedules (training_date);
CREATE INDEX idx_periodic_care_due ON periodic_care_schedules (next_due_date);
ALTER TABLE stable_boxes ADD CONSTRAINT ck_stable_capacity CHECK (capacity > 0);
ALTER TABLE horses ADD CONSTRAINT ck_horse_name CHECK (length(trim(horse_name)) > 0);
ALTER TABLE horses ADD CONSTRAINT ck_horse_weight CHECK (current_weight_kg > 0);
ALTER TABLE horses ADD CONSTRAINT ck_horse_readiness CHECK (readiness_status IN ('Ready', 'NotReady', 'Unknown'));
ALTER TABLE horses ADD CONSTRAINT ck_horse_lock_level CHECK (lock_level IN ('Warning', 'Critical'));
